# Yeobwara

./: .gitignore  MCP_TEST.txt  README.md  docker-compose.yml  fix-k8s-network.sh
.gitlab/merge_request_templates/: default,md  default.md
agent/: Dockerfile  pyproject.toml
agent-operator/: Dockerfile  requirements.txt
agent-operator/app/: config.py  deploy.py  main.py
agent/app/: main.py
backend/fastapi/: Dockerfile  requirements.txt
backend/fastapi/app/: main.py  makekey.py  migration_public_id.py  migration_script.py
backend/fastapi/app/core/: config.py  create_pod.py  database.py  delete_pod.py  password_validator.py  security.py  smart_session_manager.py
backend/fastapi/app/crud/: __init__.py  conversation.py  nosql.py
backend/fastapi/app/models/: mcp_nosql.py
backend/fastapi/app/routers/: __init__.py  chat_bot.py  conversational_chat_bot.py  db_chat_bot.py  nosql_auth.py  nosql_env.py  nosql_mcp.py  nosql_select.py  nosql_user.py
frontend/react/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/react/src/: App.tsx
frontend/react/src/api/: api.tsx  mcpService.ts
k8s/agent-operator/: 00-namespace.yaml  01-agent-operator-rbac.yaml  02-agent-operator-deploy.yaml  03-agent-operator-svc.yaml  agent-operator-rbac.yaml  namespace.yaml  readme.md
nginx/: Dockerfile  nginx.conf
terraform/gcp/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  후속조치.txt
terraform/ncp/: .terraform.lock.hcl  main.tf  ubuntu_images.json  variables.tf
(+12 files in other folders)
