[project]
name = "agent"
version = "0.1.0"
description = "FastAPI 기반 MCP 지원 AI Agent 서버"
authors = ["정찬호"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
openai = "*"
openai-agents = "*"
mcp = "*"
httpx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"